--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  height: 90vh;
+  height: 85vh;
   background-image: url('map.jpeg');
 }
 .function-search {
@@ -8,7 +8,7 @@ body {
   margin-top: 80px;
   text-align: center;
   width: 550px;
-  background-color: rgb(213, 217, 216);
+  background-color: rgb(213, 217, 216, 0.7);
   border-radius: 5px;
 }
 
@@ -29,7 +29,7 @@ body {
 }
 
 #images {
-  margin: 100px auto;
+  margin: 95px auto;
   display: flex;
   justify-content: center;
 }
